compiler-core/src/error/snapshots/gleam_core__error__tests__added_dev_dependencies_are_already_dependencies.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: Packages are already dependencies

wibble, wobble, and woo are already dependencies of this project.

Hint: If you want to use these packages as development dependencies only,
you can move them to the `dev_dependencies` section of this project's
`gleam.toml`.
