compiler-core/src/error/snapshots/gleam_core__error__tests__bun-macos-unknown.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `bun` was not found. Is it installed?
Documentation for installing bun can be viewed here:
https://bun.sh/docs/installation/
You may need to restart your shell after installing bun.
You can install oven-sh/bun/bun via homebrew: brew install oven-sh/bun/bun
