compiler-core/src/error/snapshots/gleam_core__error__tests__directory_not_found.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File not found

This directory was not found:

    /directory/
