compiler-core/src/error/snapshots/gleam_core__error__tests__elixir-windows-unknown.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `elixir` was not found. Is it installed?
Documentation for installing Elixir can be viewed here:
https://elixir-lang.org/install.html
